--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -74,7 +74,7 @@
 
   <main class="shell">
     <section class="section">
-      <h3 class="kicker">📄 My Resume</h3>
+      <h3 class="kicker">My Resume</h3>
 
       <div class="pdf-actions">
         <a class="link-chip" href="Reuben Mulholland Resume 2025.pdf" target="_blank" rel="noopener">Open in new tab</a>
