--- a/resume-site/post-multi-account.html
+++ b/resume-site/post-multi-account.html
@@ -44,6 +44,10 @@
       <h3 class="kicker">Multi-Account + CI/CD Promotion Pipeline</h3>
       <h2>Build once, promote safely across ENG → TEST → PROD</h2>
 
+      <div class="keylinks">
+        <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a><a class="link-chip" href="blog.html">← Back to Blog</a>
+      </div>
+
       <p>
         This post covers how I extended the <a class="softlink" href="post-crc.html">Cloud Resume Challenge</a> into a
         <strong>multi-account (multi-environment)</strong> AWS setup with immutable artifacts, SSM-driven configuration,
@@ -120,9 +124,12 @@
         <li>Targeted rollbacks reduce mean time to recovery from hours to minutes.</li>
       </ul>
 
+      <h2>Links</h2>
       <p class="keylinks">
+        <a class="link-chip" href="https://github.com/zReuben" target="_blank" rel="noopener">GitHub</a>
         <a class="link-chip" href="blog.html">← Back to Blog</a>
       </p>
+
     </section>
   </main>
 
