--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -33,9 +33,11 @@
           <span class="roles-sub">Focused on Cloud Engineering, DevOps, and Solutions Architecture</span><br>
           <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
-        <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
+        <p class="visitors">
+          <em class="pill">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
+        </p>
         <p class="muted" style="margin-top:.2rem;font-size:.9rem;opacity:.75;">
-          Live count via API Gateway → Lambda (Python) → DynamoDB
+          via API Gateway → Lambda (Python) → DynamoDB
         </p>
       </div>
     </div>
