API pill refactor.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -34,10 +34,10 @@
           <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
         <p class="visitors">
-          <em class="pill">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
+          <em class="pill pill--subtle">Live API CloudResumeChallenge visitor count via API Gateway → Lambda (Python) → DynamoDB: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
         </p>
         <p class="muted" style="margin-top:.2rem;font-size:.9rem;opacity:.75;">
-          via API Gateway → Lambda (Python) → DynamoDB
+          
         </p>
       </div>
     </div>
