Pill refactor & CRC clarification.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -34,10 +34,8 @@
           <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
         <p class="visitors">
-          <em class="pill pill--subtle">Live API CloudResumeChallenge visitor count via API Gateway → Lambda (Python) → DynamoDB: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
+          <em class="pill pill--subtle">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
         </p>
-        <p class="muted" style="margin-top:.2rem;font-size:.9rem;opacity:.75;">
-          
         </p>
       </div>
     </div>
@@ -103,7 +101,7 @@
         <!-- Cloud Resume Challenge -->
         <a href="post-crc.html" class="project-link"> 
           <article class="card">
-            <h4>Cloud Resume Challenge</h4>
+            <h4>Cloud Resume Challenge (Webpage & Visitor Count)</h4>
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
