CRC index listing refactor.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -101,7 +101,7 @@
         <!-- Cloud Resume Challenge -->
         <a href="post-crc.html" class="project-link"> 
           <article class="card">
-            <h4>Cloud Resume Challenge (Webpage & Visitor Count)</h4>
+            <h4>Cloud Resume Challenge (Webpage/Visitor Count)</h4>
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
