Blogs listings refactor.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -101,7 +101,8 @@
         <!-- Cloud Resume Challenge -->
         <a href="post-crc.html" class="project-link"> 
           <article class="card">
-            <h4>Cloud Resume Challenge (Webpage/Visitor Count)</h4>
+            <h4>Cloud Resume Challenge</h4>
+            <h4>(Webpage & Visitor Count)</h4>
             <div class="badges">
               <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
               <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
@@ -118,7 +119,7 @@
           <!-- Multi-Account + CI/CD -->
         <a href="post-multi-account.html" class="project-link"> 
           <article class="card">
-            <h4>Multi-Account + CI/CD Promotion</h4>
+            <h4>Multi-Account + CI/CD Promotion Pipeline</h4>
             <div class="badges">
               <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
               <span class="badge">GitHub Actions</span><span class="badge">Immutable Artifact Promotion</span>
