API pill link insertion.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -34,12 +34,15 @@
           <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
         <p class="visitors">
-          <em class="pill pill--subtle">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
-        </p>
+          <a href="post-crc.html" class="pill pill--subtle" 
+            title="Read how I built this full-stack demo (Cloud Resume Challenge)">
+            Live API visitor count: <span id="replaceme"></span>
+            <span id="spinner" class="spinner" style="display:none;"></span>
+          </a>
         </p>
       </div>
     </div>
-
+<a href="post-crc.html" class="project-link"> 
     <nav aria-label="Primary" class="topnav">
       <a href="index.html" class="home-link" title="Home • Live API proof: the visitor counter updates via API Gateway → Lambda → DynamoDB">
         <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
