API pill link insertion try #2.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -34,11 +34,10 @@
           <span class="roles-looking">Bridging technical execution with product leadership</span>
         </p>
         <p class="visitors">
-          <a href="post-crc.html" class="pill pill--subtle" 
-            title="Read how I built this full-stack demo (Cloud Resume Challenge)">
-            Live API visitor count: <span id="replaceme"></span>
-            <span id="spinner" class="spinner" style="display:none;"></span>
+          <a href="post-crc.html" class="project-link">   
+            <em class="pill pill--subtle">Live API visitor count: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></em>
           </a>
+        </p>
         </p>
       </div>
     </div>
