Refactor resume page, take down old resume and replace with new resumes.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -73,19 +73,31 @@
   </header>
 
   <main class="shell">
+    <!-- Cloud/DevOps | Solutions Architect resume -->
     <section class="section">
-      <h3 class="kicker">My Resume</h3>
+      <h3 class="kicker">Resumes</h3>
+      <h2 style="margin-top:.5rem">Cloud / DevOps / Solutions Architect</h2>
 
-      <div class="pdf-actions">
-        <a class="link-chip" href="Reuben Mulholland Resume 2025.pdf" target="_blank" rel="noopener">Open in new tab</a>
-        <a class="link-chip" href="Reuben Mulholland Resume 2025.pdf" download>Download PDF</a>
+      <div class="pdf-actions" style="margin-top:.75rem">
+        <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">
+          Open in new tab
+        </a>
+        <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>
+          Download PDF
+        </a>
       </div>
+    </section>
 
-      <div class="embed">
-        <!-- Inline PDF viewer (falls back to a link if the browser can’t embed) -->
-        <object data="Reuben Mulholland Resume 2025.pdf" type="application/pdf" class="pdf-frame">
-          <p>Unable to display the PDF here. <a href="Reuben Mulholland Resume 2025.pdf" target="_blank" rel="noopener">Open the PDF</a>.</p>
-        </object>
+    <!-- Product Management resume -->
+    <section class="section" style="margin-top:1rem">
+      <h2>Product Management</h2>
+      <div class="pdf-actions" style="margin-top:.75rem">
+        <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">
+          Open in new tab
+        </a>
+        <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>
+          Download PDF
+        </a>
       </div>
     </section>
   </main>
