--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -73,31 +73,36 @@
   </header>
 
   <main class="shell">
-    <!-- Cloud/DevOps | Solutions Architect resume -->
     <section class="section">
       <h3 class="kicker">Resumes</h3>
-      <h2 style="margin-top:.5rem">Cloud / DevOps / Solutions Architect</h2>
+      <p style="margin:.5rem 0 1rem 0">
+        I’m pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> and bring two complementary strengths:
+        <br><br>
+        <strong>Cloud/DevOps Resume</strong> — showcases my hands-on AWS work in serverless apps, Infrastructure-as-Code, CI/CD, and secure multi-environment deployments. Tailored for <em>Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect</em> roles.
+        <br>
+        <strong>Product Management Resume</strong> — highlights product leadership plus cloud fluency and AWS certification. Tailored for <em>Product Manager</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/component manufacturing</em>.
+      </p>
 
-      <div class="pdf-actions" style="margin-top:.75rem">
-        <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">
-          Open in new tab
-        </a>
-        <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>
-          Download PDF
-        </a>
-      </div>
-    </section>
+      <div class="cards">
+        <!-- Cloud / DevOps / Solutions Architect -->
+        <article class="card">
+          <h4>Cloud / DevOps / Solutions Architect</h4>
+          <p>Serverless (CloudFront/S3, API Gateway → Lambda → DynamoDB), IaC with SAM/CloudFormation, CI/CD with GitHub Actions, OIDC & least-privilege IAM.</p>
+          <p>
+            <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">Open in new tab</a>
+            <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>Download PDF</a>
+          </p>
+        </article>
 
-    <!-- Product Management resume -->
-    <section class="section" style="margin-top:1rem">
-      <h2>Product Management</h2>
-      <div class="pdf-actions" style="margin-top:.75rem">
-        <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">
-          Open in new tab
-        </a>
-        <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>
-          Download PDF
-        </a>
+        <!-- Product Management -->
+        <article class="card">
+          <h4>Product Management</h4>
+          <p>Product strategy & delivery with technical depth: agile execution, stakeholder alignment, and cloud-aware decision-making backed by AWS SAA.</p>
+          <p>
+            <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">Open in new tab</a>
+            <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>Download PDF</a>
+          </p>
+        </article>
       </div>
     </section>
   </main>
