Refactor resume page #2.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -76,18 +76,17 @@
     <section class="section">
       <h3 class="kicker">Resumes</h3>
       <p style="margin:.5rem 0 1rem 0">
-        I’m pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> and bring two complementary strengths:
+        I’m primarily pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> and bring two complementary strengths: Technical expertise and Product Management experience.
         <br><br>
-        <strong>Cloud/DevOps Resume</strong> — showcases my hands-on AWS work in serverless apps, Infrastructure-as-Code, CI/CD, and secure multi-environment deployments. Tailored for <em>Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect</em> roles.
+        <strong>Technical Resume</strong> — Tailored for technical positions such as <em>Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect</em>.
         <br>
-        <strong>Product Management Resume</strong> — highlights product leadership plus cloud fluency and AWS certification. Tailored for <em>Product Manager</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/component manufacturing</em>.
+        <strong>Management Resume</strong> — Tailored for <em>Product Manager/Technical Product Manager</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/Defense/Space industries.</em>.
       </p>
 
       <div class="cards">
         <!-- Cloud / DevOps / Solutions Architect -->
         <article class="card">
-          <h4>Cloud / DevOps / Solutions Architect</h4>
-          <p>Serverless (CloudFront/S3, API Gateway → Lambda → DynamoDB), IaC with SAM/CloudFormation, CI/CD with GitHub Actions, OIDC & least-privilege IAM.</p>
+          <h4>Technical Resume</h4>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>Download PDF</a>
@@ -96,8 +95,7 @@
 
         <!-- Product Management -->
         <article class="card">
-          <h4>Product Management</h4>
-          <p>Product strategy & delivery with technical depth: agile execution, stakeholder alignment, and cloud-aware decision-making backed by AWS SAA.</p>
+          <h4>Management Resume</h4>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>Download PDF</a>
