Refactor resume page #3.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -74,9 +74,9 @@
 
   <main class="shell">
     <section class="section">
-      <h3 class="kicker">Resumes</h3>
       <p style="margin:.5rem 0 1rem 0">
         I’m primarily pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> and bring two complementary strengths: Technical expertise and Product Management experience.
+        <h3 class="kicker">Resumes</h3>
         <br><br>
         <strong>Technical Resume</strong> — Tailored for technical positions such as <em>Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect</em>.
         <br>
@@ -86,7 +86,7 @@
       <div class="cards">
         <!-- Cloud / DevOps / Solutions Architect -->
         <article class="card">
-          <h4>Technical Resume</h4>
+          <h4>Cloud/DevOps Resume</h4>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>Download PDF</a>
@@ -95,7 +95,7 @@
 
         <!-- Product Management -->
         <article class="card">
-          <h4>Management Resume</h4>
+          <h4>Product Management Resume</h4>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>Download PDF</a>
