Refactor resume page #4.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -75,13 +75,13 @@
   <main class="shell">
     <section class="section">
       <p style="margin:.5rem 0 1rem 0">
-        I’m primarily pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> and bring two complementary strengths: Technical expertise and Product Management experience.
-        <h3 class="kicker">Resumes</h3>
+        I’m primarily pursuing opportunities across <strong>SaaS, Cloud, Cybersecurity or Aerospace/Defense/Space</strong> and bring two complementary strengths: Technical expertise and Product Management experience.
         <br><br>
-        <strong>Technical Resume</strong> — Tailored for technical positions such as <em>Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect</em>.
+        <strong>Technical Resume</strong> — Tailored for Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect </em>roles.
         <br>
-        <strong>Management Resume</strong> — Tailored for <em>Product Manager/Technical Product Manager</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/Defense/Space industries.</em>.
+        <strong>Management Resume</strong> — Tailored for <em>Product Management</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/Defense/Space industries.</em>.
       </p>
+      <h3 class="kicker">Resumes</h3>
 
       <div class="cards">
         <!-- Cloud / DevOps / Solutions Architect -->
