Refactor resume page #5.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -75,11 +75,11 @@
   <main class="shell">
     <section class="section">
       <p style="margin:.5rem 0 1rem 0">
-        I’m primarily pursuing opportunities across <strong>SaaS, Cloud, Cybersecurity or Aerospace/Defense/Space</strong> and bring two complementary strengths: Technical expertise and Product Management experience.
+        I’m pursuing opportunities across <strong>SaaS, Cloud, Cybersecurity, and Aerospace/Defense/Space</strong> industries, bringing two complementary strengths: hands-on technical expertise and proven product management leadership.
         <br><br>
-        <strong>Technical Resume</strong> — Tailored for Cloud Engineer, DevOps Engineer,</em> and <em>Solutions Architect </em>roles.
+        <strong>Cloud / DevOps Resume</strong> — Tailored for <em>Cloud Engineer, DevOps Engineer, and Solutions Architect</em> roles.
         <br>
-        <strong>Management Resume</strong> — Tailored for <em>Product Management</em> roles in <em>SaaS, Cloud, Cybersecurity,</em> or <em>Aerospace/Defense/Space industries.</em>.
+        <strong>Product Management Resume</strong> — Tailored for <em>Product Manager, Technical Product Manager, or Product Owner</em> roles.
       </p>
       <h3 class="kicker">Resumes</h3>
 
