Refactor resume page #6.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -75,9 +75,9 @@
   <main class="shell">
     <section class="section">
       <p style="margin:.5rem 0 1rem 0">
-        I’m pursuing opportunities across <strong>SaaS, Cloud, Cybersecurity, and Aerospace/Defense/Space</strong> industries, bringing two complementary strengths: hands-on technical expertise and proven product management leadership.
+        I’m pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> industries, bringing two complementary strengths: hands-on technical expertise and proven product management leadership.
         <br><br>
-        <strong>Cloud / DevOps Resume</strong> — Tailored for <em>Cloud Engineer, DevOps Engineer, and Solutions Architect</em> roles.
+        <strong>Technical Resume</strong> — Tailored for <em>Cloud Engineer, DevOps Engineer, and Solutions Architect</em> roles.
         <br>
         <strong>Product Management Resume</strong> — Tailored for <em>Product Manager, Technical Product Manager, or Product Owner</em> roles.
       </p>
@@ -86,7 +86,7 @@
       <div class="cards">
         <!-- Cloud / DevOps / Solutions Architect -->
         <article class="card">
-          <h4>Cloud/DevOps Resume</h4>
+          <h4>Technical Resume</h4>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>Download PDF</a>
