Refactor resume page #7.

--- a/resume-site/resume.html
+++ b/resume-site/resume.html
@@ -77,9 +77,6 @@
       <p style="margin:.5rem 0 1rem 0">
         I’m pursuing opportunities across <strong>SaaS, Cloud, and Cybersecurity</strong> industries, bringing two complementary strengths: hands-on technical expertise and proven product management leadership.
         <br><br>
-        <strong>Technical Resume</strong> — Tailored for <em>Cloud Engineer, DevOps Engineer, and Solutions Architect</em> roles.
-        <br>
-        <strong>Product Management Resume</strong> — Tailored for <em>Product Manager, Technical Product Manager, or Product Owner</em> roles.
       </p>
       <h3 class="kicker">Resumes</h3>
 
@@ -87,6 +84,7 @@
         <!-- Cloud / DevOps / Solutions Architect -->
         <article class="card">
           <h4>Technical Resume</h4>
+          <p>Tailored for <em>Cloud Engineer, DevOps Engineer, and Solutions Architect</em> roles.</p>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume ENG.pdf" download>Download PDF</a>
@@ -96,6 +94,7 @@
         <!-- Product Management -->
         <article class="card">
           <h4>Product Management Resume</h4>
+          <p>Tailored for <em>Product Manager, Technical Product Manager, or Product Owner</em> roles.</p>
           <p>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" target="_blank" rel="noopener">Open in new tab</a>
             <a class="link-chip" href="Reuben Mulholland Resume PM.pdf" download>Download PDF</a>
